Ability to list and edit parameters of attached TF Summary logs (#53)
* Add HubTFSummaryListScreen component showing attached logs

* Add tf_summary_logs table for storing information about logs

* Add form to parse and save log parameters for faster search and comparison

* Add ability to search tf scalars by params
