# client/public/swagger.0.0.4.yaml
@@ -497,6 +497,65 @@ paths:
             application/json:
               schema:
                 type: object
+  "/commits/tf-summary/list":
+    get:
+      operationId: getTFSummaryList
+      summary: Get tf summary log paths
+      tags:
+        - Commit
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+  "/commits/tf-summary/params/list":
+    post:
+      operationId: getTFLogParams
+      summary: Get parameters of tf summary log
+      tags:
+        - Commit
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                path:
+                  type: string
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+  "/commits/tf-summary/params/update":
+    post:
+      operationId: postTFLogParams
+      summary: Post parameters of tf summary log
+      tags:
+        - Commit
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                path:
+                  type: string
+                params:
+                  type: string
+                parsed_params:
+                  type: object
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
   "/projects":
     get:
       operationId: getProject
